opam-version: "2.0"
name: "hypveri"
synopsis: "A project on hypervisor verification."
authors: "anonymous"
maintainer : "Zongyuan Liu, Sergei Stepanenko"
license: "MIT"
build: [
  [make "clean"]
  [make "ci"]
  [make]
]
install: [make]
depends: [
  "coq" { (>= "8.14") }
  "coq-iris" { (= "dev.2022-06-10.1.53b20974") }
  "coq-stdpp" { (= "dev.2022-06-08.0.4f82f462") }
  "coq-iris-staging" { (= "dev.2022-06-10.1.53b20974") }
]
